samples/_failures_safe/1761327445_a9f36f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a2d5918.c: In function ‘main’:
./samples/SAFE/__tmp_2a2d5918.c:161: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_2a2d5918.c:160:9: error: expected declaration or statement at end of input
  160 |         if
      |         ^~
./samples/SAFE/__tmp_2a2d5918.c:160:9: error: expected declaration or statement at end of input
